@@ -2551,3 +2551,6 @@ com.vividsolutions.jump.workbench.ui.network.ProxySettingsOptionsPanel.test-url=
 ui.AttributeTablePanel.feature.view-edit=View/Edit
 org.openjump.core.ui.plugin.file.open.OpenFileWizardState.dummy-loader-description=Dummy loader (ignore data)
 org.openjump.core.ui.plugin.raster.RasterImageLayerPropertiesPlugIn.statistics=Statistics
+org.openjump.core.ui.plugin.wms.WMSLegendPlugIn=Show WMS Layer Legend
+org.openjump.core.ui.plugin.wms.WMSLegendPlugIn.panel=WMS Legend
+org.openjump.core.ui.plugin.wms.WMSLegendPlugIn.message=Error or no legend associated to selected layer
