@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-06-04 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
+  * Add WMS Legend plugin to WMS layer context menu
+
 2015-06-01 mmichaud <m.michael.michaud@orange.fr>
   * new select tool to select one or several overlapping features
 
